--- a/index.html
+++ b/index.html
@@ -1,42 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Instagram Post</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="https://kit.fontawesome.com/c65436a673.js" crossorigin="anonymous"></script>
+    <title>My Postcard</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="postal">
-        <div class="arriba">
-            <div class="arriba1">
-                <i class="fa-brands fa-html5 fa-2xl"></i>
+    <div id="cuadritogrande">
+        <div class="partesuperior">
+            <div class="superiorizq">
+                <h1>My Postcard</h1>
             </div>
-            <div class="arriba2">
-                <b>HTML5 </b><br/> Rigoberto
-            </div>
-            <div class="arriba3">
-                <i class="fa-sharp fa-solid fa-ellipsis-vertical fa-2xl"></i>
+            <div class="superiorder">
+                <img src="https://github.com/breatheco-de/exercise-postcard/blob/main/.learn/assets/4geeks.png?raw=true" width="72" height="72">
             </div>
         </div>
-        <div class="medio">
+        <div class="partemedio">
+            <div class="medioizq">
+                    <p>Look how aweaome! This is a postcard that i created using HTML5 and CSS3 during my 4Geeks Academy Course</p>
+                    <p>This is so cool, can`t wait to start doing more stuff!</p>
             </div>
-        <div class="abajo">
-            <div class="abajo1">
-                <i class="fa-regular fa-heart fa-2xl"></i>
-                <i class="fa-regular fa-comment fa-2xl"></i>
-                <i class="fa-regular fa-paper-plane fa-2xl"></i>
-                <i class="fa-regular fa-bookmark fa-2xl"></i>
+            <div class="medioder">
+                <input type="text" id="username" name="" placeholder="Some Name" required><br><br>
+                <input type="text" id="useremail" name="" placeholder="Some Email" required><br><br>
+                <input type="text" id="lname" name="" placeholder="Some comment" required>
             </div>
-            <div class="abajo2">
-                Liked by <b>&nbsp 4GeeksAcademy, html5, Web</b>&nbsp and <b>&nbsp100,000 others</b>
-            </div>
-            <div class="abajo3">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum natus cum quam, itaque unde iure aperiam explicabo tempora odit maiores quaerat quisquam alias, minus sint recusandae consequuntur ullam debitis repellendus?
-            </div>
+        </div>
+        <div class="parteinferior">
+            <button>Send My Postcard</button>
         </div>
     </div>
 </body>
+
 </html>
